gcc/testsuite/gcc.target/mips/abi-n32-long64-pic.c
/* { dg-options "-mabi=n32 -mlong64 -fpic" } */
/* { dg-error "is incompatible with" "" { target *-*-* } 0 } */
#include "abi-main.h"
